some sonar fixes